2004-08-18  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/music/background/BarDasImagens.ogg: from Rico Da Halvarez http://info.vnatrc.net/
	* boards/music/background/COPYRIGHT:
	* boards/music/background/bontemp1.ogg: from Rico Da Halvarez http://info.vnatrc.net/
	* boards/music/background/glockenschmoutz.ogg: from Rico Da Halvarez http://info.vnatrc.net/
	* boards/music/background/vaudeville.ogg: from Rico Da Halvarez http://info.vnatrc.net/

2004-08-17  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/sounds/fr/geography/gcompris_geography_fr.assetml.in: fixed
	* boards/sounds/it/alphabet/1.ogg: all ogg files below have been converted from 
	* boards/sounds/it/alphabet/10.ogg: 44000Hz to 44100Hz
	* boards/sounds/it/alphabet/11.ogg: using the command
	* boards/sounds/it/alphabet/12.ogg: oggdec *.ogg && oggenc  --resample 44100 -q -1 *.wav && rm -f *.wav
	* boards/sounds/it/alphabet/13.ogg: by Jose
	* boards/sounds/it/alphabet/14.ogg: In some case, playing 44000Hz file creates problems.
	* boards/sounds/it/alphabet/15.ogg:
	* boards/sounds/it/alphabet/16.ogg:
	* boards/sounds/it/alphabet/17.ogg:
	* boards/sounds/it/alphabet/18.ogg:
	* boards/sounds/it/alphabet/19.ogg:
	* boards/sounds/it/alphabet/2.ogg:
	* boards/sounds/it/alphabet/20.ogg:
	* boards/sounds/it/alphabet/3.ogg:
	* boards/sounds/it/alphabet/4.ogg:
	* boards/sounds/it/alphabet/5.ogg:
	* boards/sounds/it/alphabet/6.ogg:
	* boards/sounds/it/alphabet/7.ogg:
	* boards/sounds/it/alphabet/8.ogg:
	* boards/sounds/it/alphabet/9.ogg:
	* boards/sounds/it/alphabet/a.ogg:
	* boards/sounds/it/alphabet/b.ogg:
	* boards/sounds/it/alphabet/c.ogg:
	* boards/sounds/it/alphabet/d.ogg:
	* boards/sounds/it/alphabet/e.ogg:
	* boards/sounds/it/alphabet/f.ogg:
	* boards/sounds/it/alphabet/g.ogg:
	* boards/sounds/it/alphabet/h.ogg:
	* boards/sounds/it/alphabet/i.ogg:
	* boards/sounds/it/alphabet/j.ogg:
	* boards/sounds/it/alphabet/k.ogg:
	* boards/sounds/it/alphabet/l.ogg:
	* boards/sounds/it/alphabet/m.ogg: