@@ -3,15 +3,16 @@
   <Board
         name="ballcatch"
         type="python:ballcatch"
-        section="/."
+        section="/computer/."
         icon="boardicons/ballcatch.png"
-        difficulty="0"
+        difficulty="1"
         author="Bruno Coudoin (bruno.coudoin@free.fr)"
         boarddir="">
         <_title>Send the ball to Tux</_title>
         <_description>Push the two shift keys together to send the ball straight</_description>
         <_prerequisite></_prerequisite>
         <_goal></_goal>
+        <_manual></_manual>
         <_credit></_credit>
   </Board>
   <Data directory=""/>
