@@ -1,3 +1,10 @@
+2004-08-24  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	* boards/ballcatch.xml.in: now moved level 1 in computer section
+	* boards/images/beach.png: created with inkscape by bruno
+	* src/boards/python/ballcatch.py: completed the game. level management is ok.
+	* src/boards/python/redraw.py: type fix
+
 2004-08-18  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	* boards/music/background/BarDasImagens.ogg: from Rico Da Halvarez http://info.vnatrc.net/
